# F

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/woxel/app/: WoxelForegroundService.kt  WoxelPlatformBridge.kt
app_flutter/: pubspec.yaml
app_flutter/lib/: main.dart
app_flutter/lib/ffi/: woxel_client.dart
app_flutter/lib/models/: file_item.dart
app_flutter/lib/screens/: home_screen.dart
app_flutter/lib/viewmodels/: files_vm.dart
app_flutter/lib/widgets/: category_icon.dart
app_flutter/test/: widget_test.dart
bindings/dart/: woxel_bindings.dart
bindings/include/: woxel_ffi.h
bindings/jni/: woxel_jni_bridge.h
core_cpp/: CMakeLists.txt
core_cpp/include/woxel/: error.h  file_category.h  file_ops.h  search_index.h  thumb_cache.h
core_cpp/src/: woxel_api.cpp
core_cpp/src/archive/: zip_service.cpp
core_cpp/src/data/: file_ops.cpp  search_index.cpp
core_cpp/src/domain/: file_category.cpp
core_cpp/src/network/: protocols.cpp
core_cpp/src/thumbnail/: thumb_cache.cpp
core_cpp/tests/: core_tests.cpp
deploy/: woxel.service
docs/: architecture.md  faq.md  permissions.md
migrations/: 20260101000000_init.sql
scripts/: build_flutter_apk_with_core.sh  format.sh
src/: config.rs  i18n.rs  main.rs  utils.rs
src/bot/: handlers.rs  middleware.rs  mod.rs  ui.rs
src/db/: mod.rs  models.rs  queries.rs
src/moderation/: mod.rs  rules.rs
